deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: 745392035468.dkr.ecr.ap-south-1.amazonaws.com/nodejsexample:latest
          ports:
            - containerPort: 80
